[package]
name = "yavv"
edition = "2021"

[dependencies]
nalgebra = "*"
winit = "*"
wgpu = "*"
tinyjson = "*"
image = { version = "*", default-features = false, features = ["jpeg", "png"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
lto = true
strip = true
